--- a/index.html
+++ b/index.html
@@ -14,6 +14,39 @@
     ></script>
   </head>
   <body>
+    <div class="form">
+      <h1>Login</h1>
+      <div class="input">
+        <label for="email"
+          ><i class="fa fa-envelope-o" aria-hidden="true" id="emailIcon"></i
+        ></label>
+        <input
+          type="text"
+          name="email"
+          id="email"
+          required
+          placeholder="E-Mail"
+        />
+      </div>
+      <div class="input">
+        <label for="password"
+          ><i class="fa fa-lock" aria-hidden="true" id="passIcon"></i
+        ></label>
+
+        <input
+          type="password"
+          name="password"
+          id="password"
+          required
+          placeholder="Password"
+        />
+      </div>
+      <button id="login">L O G I N</button>
+      <div class="help">
+        <h3>Forgot Password</h3>
+        <h3>Register</h3>
+      </div>
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
